--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     }
     nav a:hover {color: #ffcc00;}
     .hero {
-      background: url('https://images.unsplash.com/photo-1581091012184-5c5a42a04f9b?auto=format&fit=crop&w=1600&q=80') no-repeat center center/cover;
+      background: url('hero .jpg') no-repeat center center/cover;
       color: #fff;
       text-align: center;
       padding: 120px 20px;
@@ -253,3 +253,4 @@
 
 </body>
 </html>
+
